--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,21 +2,21 @@
 
 name: TestIssues
   
-on: issues
+on:
+  issues:
+    types:
+      - labeled
+
 
 jobs:
-  job1:
+  add-comment:
+    if: github.event.label.name == 'request to update cache'
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - name: View issue information
         run: |
           echo "Issue title: ${{ github.event.issue.title }}"
           echo "Issue body: ${{ github.event.issue.body }}"
-
-      # You also can print the whole github context to the logs to view more details.
-      - name: View the github context
-        run: echo "$GITHUB_CONTEXT"
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-
 
