--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,7 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Update the cache file from the issue
-        run: python update_cache.py --issue ${{ github.event.issue.body }}
+        run: |
+          echo ${{ github.event.issue.body }}
+          echo "#######"
+          python update_cache.py --issue ${{ github.event.issue.body }}
