--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
         run: |
           echo ${{ toJson(github.event.issue.body) }}
           echo "#######"
-          python update_cache.py --issue ${{ github.event.issue.body }}
+          python update_cache.py --issue ${{ toJson(github.event.issue.body) }}
