--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: update_cache
 
 env:
   PYTHON_VERSION: '3.8'               # set this to the Python version to use
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   issues:
@@ -49,4 +50,6 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git commit -m "add changes" -a
       - name: Push changes
-        run: git push -u origin main
+        run: |
+          git remote set-url --push origin https://doragd:$GITHUB_TOKEN@github.com/doragd/Github-Action-Experiments
+          git push -u origin main
