--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,7 @@ jobs:
       issues: write
       contents: write
     steps:
-      - uses: actions/checkout@v2
-        with:
-          persist-credentials: true # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
-          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
+      - uses: actions/checkout@v3
       - name: Set up Python version
         uses: actions/setup-python@v3
         with:
@@ -46,11 +43,21 @@ jobs:
           python update_cache.py --issue ${{ toJson(github.event.issue.body) }}
           
       - name: Commit files
+        id: commit
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -m "add changes" -a
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
+          git add --all
+          if [-z "$(git status --porcelain)"]; then
+             echo "::set-output name=push::false"
+          else
+             git commit -m "update cache" -a
+             echo "::set-output name=push::true"
+          fi
+        shell: bash
+        
       - name: Push changes
-        run: |
-          git remote set-url --push origin https://doragd:$GITHUB_TOKEN@github.com/doragd/Github-Action-Experiments
-          git push -u origin main
+        if: steps.commit.outputs.push == 'true'
+        uses: ad-m/github-push-action@master
+        with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
